https://github.com/vijayrajput12/portfolio.git

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <i class="fa-solid fa-bars extra" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
-        <p>UI/Ux Designer</p>
+        <p>Web Designer</p>
             <h1>Hi,i'm <span class="vspan">V</span>ijay Singh </h1>
         </div>
         
@@ -87,15 +87,15 @@
             <div>
                 <i class="fa-solid fa-code"></i>
                 <h1>web design</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et possimus placeat, officiis tempore in dolorem officia. Deserunt earum optio facere.</p>
+                <p>as a Web desinger, my objective is to make a positive impact on  clients, co-Workers,and the internet using my skills and exprience to design compelling and attractive website. </p>
                 <a href="#">Learn more</a>
             </div>
-            <div>
+            <!-- <div>
                 <i class="fa-solid fa-crop"></i>
                 <h1>UI/UX design</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et possimus placeat, officiis tempore in dolorem officia. Deserunt earum optio facere.</p>
                 <a href="#">Learn more</a>
-            </div>
+            </div> -->
            
 
         </div>
