--- a/index.html
+++ b/index.html
@@ -129,6 +129,44 @@
     </div>
 </div>
 
+
+
+
+<div class="projects">
+    
+    <div class="header">
+        <h2 style="text-align: center;">Our projects</h2>
+    </div>
+    <div class="project"> 
+    <div class="first first_project">
+        <h3>Food mart</h3>
+        <p>GitHub links</p>
+        <a href="https://vijayrajput12.github.io/Food-mart/">https://vijayrajput12.github.io/Food-mart/</a>
+    </div>
+    <div class="first second_project">
+        <h3>Mantra(clone)</h3>
+        <p>GitHub links</p>
+        <a href='https://vijayrajput12.github.io/Mantra/'>https://vijayrajput12.github.io/Mantra/</a>
+    </div>
+    <div class="first three_project">
+        <h3>Jbj Computer Training Center</h3>
+        <p>GitHub links</p>
+        <a href="https://vijayrajput12.github.io/computer-coching/">https://vijayrajput12.github.io/computer-coching/</a>
+    </div>
+    <div class="first three_project">
+        <h3>Dream houses</h3>
+        <p>GitHub links</p>
+        <a href=" https://vijayrajput12.github.io/dream-house/"> https://vijayrajput12.github.io/dream-house/</a>
+    </div>
+    <div class="first three_project">
+        <h3>Trevel</h3>
+        <p>GitHub links</p>
+        <a href=" https://vijayrajput12.github.io/trevel/"> https://vijayrajput12.github.io/trevel/</a>
+    </div>
+   
+</div>
+</div>
+
 <!-- ----------------contact-------------------- -->
 <div id="contact">
     <div class="container">
@@ -157,6 +195,12 @@
         <p>Copyright @Vijay </p>
     </div>
 </div>
+
+
+
+
+
+
 
 
 
