--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/about.avif" alt="">
+                <!-- <img src="images/about.avif" alt=""> -->
+                <img src="images/vijay.jpg" alt="">
                 <!-- <img src="images/about.avif" alt=""> -->
             </div>
             <div class="about-col-2">
